--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -112,7 +112,7 @@
                 {
                     <a asp-page="/Event">
                         <div class="card-size">
-                            <div class="card" style="width: 18rem;">
+                            <div class="card" style="max-width: 18rem;">
                                 <div class="card-body">
                                     <h5 class="card-title text-center">@Html.DisplayFor(modelItem => item.Title)</h5>
                                     <!--<p class="card-text">@Html.DisplayFor(modelItem => item.text)</p>-->
@@ -127,8 +127,8 @@
                 {
                     <a asp-page="/Event">
                         <div class="card-size">
-                            <div class="card" style="width: 18rem;">
-                                <img class="images card-image-top" src="~/images/events/@Html.DisplayFor(modelItem => item.Image)" alt="Card image cap">
+                            <div class="card" style="max-width: 18rem;">
+                                <img class="card-image-top" src="~/images/events/@Html.DisplayFor(modelItem => item.Image)" alt="Card image cap">
                                 <div class="card-body">
                                     <h5 class="card-title text-center">@Html.DisplayFor(modelItem => item.Title)</h5>
                                     <!--<p class="card-text">@Html.DisplayFor(modelItem => item.text)</p>-->
