--- a/Pages/membership.cshtml
+++ b/Pages/membership.cshtml
@@ -3,35 +3,39 @@
 @{
     ViewData["Title"] = "membership";
 }
-<body>
     <div class="container">
-        <div class="text-justify">
-            <h3>EABA Membership</h3>
-            <a href="./assets/EABA-Member-Info.pdf">Application guidelines for organizational members </a>
-            <p>EABA membership is open to anyone with a demonstrated interest in behaviour analysis and who is committed to the objectives of EABA.</p>
-            <p>EABA consists of full (voting) and associate/student (non-voting) members. A full member is anyone holding a terminal degree in a discipline which is directly related to or involving behaviour analysis and whose full-time professional commitments include teaching, research and/or practice in behaviour analysis. To become a full member of EABA you must meet the following requirements:</p>
-            <ol>
-                <li>You have completed a university degree or college diploma in a related field and</li>
-                <li>You have been employed for at least one year in a professional capacity in social services, education, industry, or other related fields which involves the application of behaviour analytic principles and is approved by the membership committee.</li>
-            </ol>
-            <div class="row">
-                <div class="col-md-8">
-                    <p>For proof of 1. a scan of your diploma is necessary, for proof of 2. a scan of an official document (e.g. certificate of employment) should be provided. Please send the scans to <a href="mailto:secretary@europenaba.org">secretary@europenaba.org.</a> The board of EABA will have the final decision on the approval of the full, voting membership.</p>
-                    <p>Those interested in joining who do not meet these requirements may apply for student or affiliate non-voting membership status and still enjoy the benefits of being a member of EABA. An affiliate/student member is typically an individual who is interested in the discipline of behaviour analysis but who lacks formal training or who is pursuing formal training on a full time basis in the discipline of behaviour analysis.</p>
-                </div>
-                <div class="col-md-4">
-                    <img src="~/images/private/hond.png"/>
+        
+            <h3 class="heading">EABA Membership</h3>
+            <div class="card">
+
+                <div class="card-body">
+                    <h3><a href="./assets/EABA-Member-Info.pdf">Application guidelines for organizational members </a></h3>
+                    <p>EABA membership is open to anyone with a demonstrated interest in behaviour analysis and who is committed to the objectives of EABA.</p>
+                    <p>EABA consists of full (voting) and associate/student (non-voting) members. A full member is anyone holding a terminal degree in a discipline which is directly related to or involving behaviour analysis and whose full-time professional commitments include teaching, research and/or practice in behaviour analysis. To become a full member of EABA you must meet the following requirements:</p>
+                    <ol>
+                        <li>You have completed a university degree or college diploma in a related field and</li>
+                        <li>You have been employed for at least one year in a professional capacity in social services, education, industry, or other related fields which involves the application of behaviour analytic principles and is approved by the membership committee.</li>
+                    </ol>
+                    <div class="row">
+                        <div class="col-md-8">
+                            <p>For proof of 1. a scan of your diploma is necessary, for proof of 2. a scan of an official document (e.g. certificate of employment) should be provided. Please send the scans to <a href="mailto:secretary@europenaba.org">secretary@europenaba.org.</a> The board of EABA will have the final decision on the approval of the full, voting membership.</p>
+                            <p>Those interested in joining who do not meet these requirements may apply for student or affiliate non-voting membership status and still enjoy the benefits of being a member of EABA. An affiliate/student member is typically an individual who is interested in the discipline of behaviour analysis but who lacks formal training or who is pursuing formal training on a full time basis in the discipline of behaviour analysis.</p>
+                        </div>
+                        <div class="col-md-4">
+                            <img src="~/images/private/hond.png" />
+                        </div>
+                    </div>
+                    <p>If you are a member of an affiliated chapter of EABA, you are eligible to an Affiliated Chapters Membership, either full (voting) or student (non-voting).</p>
+                    <h3>Benefits</h3>
+                    <ol>
+                        <li>Subscription to the European Journal of Behaviour Analysis</li>
+                        <li>Reduced EABA conference registration fees</li>
+                        <li>Affiliate/student members enjoy all benefits of membership except for the right to vote on matters of interest to the organization and the right to hold office.</li>
+                    </ol>
+                    <b>
+                        If you stand up to these requirements, Join our team by
+                        <a class="btn btn-primary" href="/Identity/Account/Register">Registering here</a>
+                    </b>
                 </div>
             </div>
-            <p>If you are a member of an affiliated chapter of EABA, you are eligible to an Affiliated Chapters Membership, either full (voting) or student (non-voting).</p>
-            <h3>Benefits</h3>
-            <ol>
-                <li>Subscription to the European Journal of Behaviour Analysis</li>
-                <li>Reduced EABA conference registration fees</li>
-                <li>Affiliate/student members enjoy all benefits of membership except for the right to vote on matters of interest to the organization and the right to hold office.</li>
-            </ol>
-            <b>If you stand up to these requirements, Join our team by <a href="/Identity/Account/Register">Registering here</a></b>
         </div>
-    </div>
-</body>
-
