--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -23,6 +23,14 @@
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+        
+        <!-- Prufa -->
+        <link rel="stylesheet" href='~/../Pages/css/footer.min.css' asp-append-version="true">
+        <link rel="stylesheet" href="~/css/homePage.min.css" asp-append-version="true"/>
+        <link rel="stylesheet" href="~/css/navBar.min.css" asp-append-version="true"/>
+        <link rel="stylesheet" href="~/css/page.min.css" asp-append-version="true"/>
+        <link rel="stylesheet" href="~/css/header.min.css" asp-append-version="true"/>
+        <link rel="stylesheet" href="~/css/heading.min.css" asp-append-version="true"/>
     </environment>
 </head>
 <body>
