--- a/Pages/Shared/_Carousel.cshtml
+++ b/Pages/Shared/_Carousel.cshtml
@@ -12,15 +12,15 @@
             <div class="carousel-item active">
                 <img src="~/images/carousel/eaba-profiler1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block" style="background: black; opacity: 0.8;filter: alpha(opacity=30);">
-                    <h5>Welcome to EABA, a central hub to share resources</h5>
-                    <p>joining up behaviour analysis across europe</p>
+                    <p>Welcome to EABA, a central hub to share resources</p>
+                    <h5>Joining up behaviour analysis across europe</h5>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="~/images/carousel/eaba-profiler2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block" style="background: black; opacity: 0.8;filter: alpha(opacity=30);">
-                    <h5>Study behaviour analysis in European opportunity to be inspired and share ideas</h5>
-                    <p>an opportunity to be inspired and share ideas</p>
+                    <p>An opportunity to be inspired and share ideas</p>
+                    <h5>Study behaviour analysis in Europe</h5>
                 </div>
             </div>
         </div>
