--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -95,7 +95,7 @@
                                 About us
                             </a>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                <a class="dropdown-item" asp-page="/presidents_opinion">presidents opinion statement</a>
+                                <a class="dropdown-item" asp-page="/presidents_opinion">Presidents opinion statement</a>
                                 <a class="dropdown-item" asp-page="/committee">Committee</a>
                                 <a class="dropdown-item" asp-page="/constitution">Constitution</a>
                                 <a class="dropdown-item" asp-page="/EABA_history">EABA history</a>
