--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -9,7 +9,7 @@
 </head>
 
 <h2 class ="login_header">@ViewData["Title"]</h2>
-<div class="col-sm r">
+<div class="login_header">
                     <img class="logo-cont" alt="Brand" src="~/images/logo.png">
                 </div>
 <div class="row" id="loginContainer">
