--- a/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -13,7 +13,7 @@
                 <div class="list-group">
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Manage">Profile</a>
                     <a class="list-group-item list-group-item-action active" href="/Identity/Account/Manage/ChangePassword">Password</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Manage/DeletePersonalData">Delete your accont</a>
+                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Manage/DeletePersonalData">Delete your account</a>
                 </div>
             </div>
             <div class="col-md-9">
