--- a/Areas/Identity/Pages/Account/Admin/Events/Create.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Events/Create.cshtml
@@ -44,7 +44,8 @@
                                 <span asp-validation-for="Event.date" class="text-danger"></span>
                             </div>
                             <div class="form-group">
-                                <input type="file" name="files" multiple />
+                                <label class="control-label">Chosse optional picture for event</label>
+                                <input class="form-control-file" type="file" name="files" multiple />
                             </div>
                             <div class="form-group">
                                 <input type="submit" value="Create" class="btn btn-primary" />
