--- a/Areas/Identity/Pages/Account/Admin/News/Create.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/News/Create.cshtml
@@ -26,7 +26,8 @@
                                 <textarea textarea asp-for="Grant.text" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                             </div>
                             <div class="form-group">
-                                <input type="file" name="files" multiple />
+                                <label class="control-label">Chosse optional picture for news</label>
+                                <input class="form-control-file" type="file" name="files" multiple />
                             </div>
                             <div class="form-group">
                                 <input type="submit" value="Create" class="btn btn-primary" />
