er að vinna í index

--- a/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
+++ b/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
@@ -3,8 +3,16 @@
 @{
     ViewData["Title"] = "Reset password confirmation";
 }
-
+<head>
+    <link rel="stylesheet" href="~/css/login.css">
+</head>
 <h2>@ViewData["Title"]</h2>
-<p>
-    Your password has been reset. Please <a asp-page="./Login">click here to log in</a>.
-</p>
+<div class="row" id="loginContainer">
+    <div class="col-md-4">
+        <section>
+            <p>
+                Your password has been reset. Please <a asp-page="./Login">click here to log in</a>.
+            </p>
+        </section>
+    </div>
+</div>
