--- a/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -3,10 +3,17 @@
 @{
     ViewData["Title"] = "Confirm email";
 }
-
-<h2>@ViewData["Title"]</h2>
-<div>
-    <p>
-        Thank you for confirming your email.
-    </p>
+<head>
+    <link rel="stylesheet" href="~/css/login.css">
+</head>
+<div class="row" id="loginContainer">
+    <div class="col-md-4">
+        <section>
+            <h2>@ViewData["Title"]</h2>            
+                <p>
+                    Thank you for confirming your email.
+                </p>
+           </section>
+    </div>
 </div>
+            
