--- a/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -1,23 +1,27 @@
 ﻿@page
 @model ForgotPasswordModel
-@{
-    ViewData["Title"] = "Forgot your password?";
-}
 
-<h2>@ViewData["Title"]</h2>
-<h4>Enter your email.</h4>
-<hr />
-<div class="row">
+@{
+    ViewData["Title"] = "Forgot your password";
+}
+<head>
+    <link rel="stylesheet" href="~/css/login.css">
+</head>
+
+<h2 class="login_header">Forgot your password</h2>
+<div class="row" id="loginContainer">
     <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-        </form>
+        <section>
+            <form method="post">
+                <div asp-validation-summary="All" class="text-danger"></div>
+                <div class="form-group">
+                    <label>Please enter your email</label>
+                    <input asp-for="Input.Email" class="form-control" />
+                    <span asp-validation-for="Input.Email" class="text-danger"></span>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </section>
     </div>
 </div>
 
