--- a/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -3,9 +3,13 @@
 @{
     ViewData["Title"] = "Forgot password confirmation";
 }
-
-<h2>@ViewData["Title"]</h2>
-<p>
-    Please check your email to reset your password.
-</p>
+<head>
+    <link rel="stylesheet" href="~/css/login.css">
+</head>
+<div class="row" id="loginContainer">
+    <div class="col-md-4">
+    <h2>@ViewData["Title"]</h2>
+        <p>Please check your email for reseting your password</p>
+    </div>
+</div>
 
