--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -33,6 +33,7 @@
                             </div>
                             <div class="form-group">
                                 <label asp-for="Input.Email"></label>
+                                <label>@Model.StatusMessage</label>
                                 @if (Model.IsEmailConfirmed)
                                 {
                                     <div class="input-group">
@@ -45,6 +46,7 @@
                                     <input asp-for="Input.Email" class="form-control" />
                                     <button id="email-verification" type="submit" asp-page-handler="SendVerificationEmail" class="btn btn-link">Send verification email</button>
                                 }
+                                <span>@Model.StatusMessage</span>
                                 <span asp-validation-for="Input.Email" class="text-danger"></span>
                             </div>
                             <div class="form-group">
