--- a/Areas/Identity/Pages/Account/Admin/_Layout.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/_Layout.cshtml
@@ -83,7 +83,7 @@
                     </li>
                     <li class="nav-item active">
                         <div class="dropdown">
-                            <a class="btn btn-secondary" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="btn btn-secondary" href="committee" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 About us
                             </a>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
@@ -132,6 +132,7 @@
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment exclude="Development">
+        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
