--- a/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -83,7 +83,7 @@
                     </li>
                     <li class="nav-item active">
                         <div class="dropdown">
-                            <a class="btn btn-secondary" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="btn btn-secondary" href="committee" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 About us
                             </a>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
@@ -130,12 +130,13 @@
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
         <environment exclude="Development">
+            <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="~/css/footer.css" asp-append-version="true" />
-        <link rel="stylesheet" href='~/../Pages/css/footer.css' asp-append-version="true">
+        <link rel="stylesheet" href='~/css/footer.css' asp-append-version="true">
         <link rel="stylesheet" href="~/css/homePage.css" asp-append-version="true" />
         <link rel="stylesheet" href="~/css/navBar.css" asp-append-version="true" />
         <link rel="stylesheet" href="~/css/page.css" asp-append-version="true" />
