--- a/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -83,7 +83,7 @@
                     </li>
                     <li class="nav-item active">
                         <div class="dropdown">
-                            <a class="btn btn-secondary" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="btn btn-secondary" href="/committee" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 About us
                             </a>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
