--- a/Areas/Identity/Pages/Account/Admin/admin_edit_pdf.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/admin_edit_pdf.cshtml
@@ -16,22 +16,22 @@
                         <div class="row justify-content-center">
                             <div class="col-md-6">
                                 <h2>Edit pdf files</h2>
-                                <p>This is the upload for the <b>EABA by-laws</b>, once uploaded this will replace the previous file. <br> <b>This process is irreversible</b></p>
+                                <p>This is the upload for the <b>EABA by-laws</b>, once uploaded this will replace the previous file. <br><font color="red"> <b>This process is irreversible</b></font></p>
                                 <form method="post" asp-controller="UploadByLaws" enctype="multipart/form-data">
                                     <div class="form-group">
-                                        <label class="control-label">Chosse PDF file</label>
+                                        <label class="control-label">Choose PDF file</label>
                                         <input class="form-control-file" type="file" name="files" multiple />
                                     </div>
 
-                                    <p>This is the upload for the <b>Organization Information</b>, once uploaded this will replace the previous file. <br> <b>This process is irreversible</b></p>
+                                    <p>This is the upload for the <b>Organization Information</b>, once uploaded this will replace the previous file. <br><font color="red"> <b>This process is irreversible</b></font></p>
                                     <div class="form-group">
-                                        <label class="control-label">Chosse PDF file</label>
+                                        <label class="control-label">Choose PDF file</label>
                                         <input class="form-control-file" type="file" name="files" multiple />
                                     </div>
                                     <button type="submit" class="btn btn-primary">Upload Files</button>
                                 </form>
 
-                                
+
                             </div>
                         </div>
                     </div>
