--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -15,7 +15,7 @@
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
-                <label>Fyrst Name *</label>
+                <label>First Name *</label>
                 <input asp-for="Input.fyrstName" class="form-control" />
                 <span asp-validation-for="Input.fyrstName" class="text-danger"></span>
             </div>
